<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_blood_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTransparent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="0dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_bottom_sheet_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_appointment_title"
                android:textColor="@color/colorSecondary"
                android:textSize="21sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_title"
                android:hint="@string/ex_fri_jan_15_consultation"
                android:layout_width="match_parent"
                android:maxLength="50"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_title"
                android:drawablePadding="@dimen/drawable_padding"
                android:textAlignment="viewStart"
                android:layout_marginTop="@dimen/half_padding"
                android:inputType="text"/>

            <Button
                android:id="@+id/btn_add_appointment"
                style="@style/ConfirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/create_appointment"
                android:layout_marginTop="@dimen/padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_gender" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>