<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appointments.appointment_view_edit.EditAppointmentActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_apply_changes"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/enter_the_appointment_title"
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:maxLength="24"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding"
                app:drawableStartCompat="@drawable/ic_title"
                android:drawablePadding="@dimen/drawable_padding"
                android:textAlignment="viewStart"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:hint="@string/enter_your_notes_and_prescriptions"
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding"
                app:drawableStartCompat="@drawable/ic_doctor_notes"
                android:drawablePadding="@dimen/drawable_padding"
                android:textAlignment="viewStart"
                android:inputType="textLongMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_title"
                android:maxLines="3"/>

            <TextView
                android:id="@+id/tv_appointment_Images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_notes"
                android:layout_margin="@dimen/padding"
                android:text="@string/appointment_images"
                android:textColor="@color/colorSecondary"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_appointment_images"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tv_appointment_Images"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="@dimen/padding"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/btn_apply_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_icon"/>

    <Button
        android:id="@+id/btn_apply_changes"
        style="@style/RegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:padding="@dimen/padding"
        android:text="@string/apply_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>